--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,7 +7,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 100 200 300 400 500 600 700 800 900;
-  src: url('../fonts/Inter/Inter-VariableFont_slnt,wght.ttf') format('truetype-variations');
+  src: url('$lib/fonts/Inter/Inter-VariableFont_slnt,wght.ttf') format('truetype-variations');
 }
 
 /* Import font Fira_Code located in /fonts/Fira_Code/FiraCode-VariableFont_wght.ttf */
@@ -15,7 +15,7 @@
   font-family: 'Fira Code';
   font-style: monospace;
   font-weight: 300 400 500 600 700;
-  src: url('../fonts/Fira_Code/FiraCode-VariableFont_wght.ttf') format('truetype-variations');
+  src: url('$lib/fonts/Fira_Code/FiraCode-VariableFont_wght.ttf') format('truetype-variations');
 }
 
 body {
