--- a/src/app.postcss
+++ b/src/app.postcss
@@ -21,3 +21,92 @@
 body {
   font-family: 'Inter', sans-serif;
 }
+
+/**
+ * This CSS code block defines the syntax highlighting styles for the code blocks in the application.
+ */
+pre code.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 1em;
+}
+code.hljs {
+  padding: 3px 5px;
+}
+.hljs {
+  color: rgb(var(--ctp-text));
+  background: transparent;
+}
+.hljs-doctag,
+.hljs-keyword,
+.hljs-meta .hljs-keyword,
+.hljs-template-tag,
+.hljs-template-variable,
+.hljs-type,
+.hljs-variable.language_ {
+  color: rgb(var(--ctp-blue));
+}
+.hljs-title,
+.hljs-title.class_,
+.hljs-title.class_.inherited__,
+.hljs-title.function_ {
+  color: rgb(var(--ctp-pink));
+}
+.hljs-attr,
+.hljs-attribute,
+.hljs-literal,
+.hljs-meta,
+.hljs-number,
+.hljs-operator,
+.hljs-selector-attr,
+.hljs-selector-class,
+.hljs-selector-id,
+.hljs-variable {
+  color: rgb(var(--ctp-orange));
+}
+.hljs-meta .hljs-string,
+.hljs-regexp,
+.hljs-string {
+  color: rgb(var(--ctp-green))
+}
+.hljs-built_in,
+.hljs-symbol {
+  color: rgb(var(--ctp-peach));
+}
+.hljs-code,
+.hljs-comment,
+.hljs-formula {
+  color: rgb(var(--ctp-subtext0));
+}
+.hljs-name,
+.hljs-quote,
+.hljs-selector-pseudo,
+.hljs-selector-tag {
+  color: rgb(var(--ctp-blue));
+}
+.hljs-subst {
+  color: rgb(var(--ctp-blue));
+}
+.hljs-section {
+  color: rgb(var(--ctp-blue));
+  font-weight: 700;
+}
+.hljs-bullet {
+  color: rgb(var(--ctp-orange));
+}
+.hljs-emphasis {
+  color: rgb(var(--ctp-subtext0));
+  font-style: italic;
+}
+.hljs-strong {
+  color: rgb(var(--ctp-text));
+  font-weight: 700;
+}
+.hljs-addition {
+  color: rgb(var(--ctp-green));
+  background-color: rgba(var(--ctp-green), 0.2);
+}
+.hljs-deletion {
+  color: rgb(var(--ctp-red));
+  background-color: rgba(var(--ctp-red), 0.2);
+}
