--- a/src/app.postcss
+++ b/src/app.postcss
@@ -22,91 +22,50 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
-/**
- * This CSS code block defines the syntax highlighting styles for the code blocks in the application.
- */
-pre code.hljs {
-  display: block;
-  overflow-x: auto;
-  padding: 1em;
+article .content h1 {
+  @apply text-6xl font-bold text-ctp-lavender;
 }
-code.hljs {
-  padding: 3px 5px;
+
+article .content h2 {
+  @apply text-4xl font-bold text-ctp-lavender;
 }
-.hljs {
-  color: rgb(var(--ctp-text));
-  background: transparent;
+
+article .content h3 {
+  @apply text-2xl font-bold text-ctp-lavender;
 }
-.hljs-doctag,
-.hljs-keyword,
-.hljs-meta .hljs-keyword,
-.hljs-template-tag,
-.hljs-template-variable,
-.hljs-type,
-.hljs-variable.language_ {
-  color: rgb(var(--ctp-blue));
+
+article .content h4 {
+  @apply text-xl font-bold text-ctp-lavender;
 }
-.hljs-title,
-.hljs-title.class_,
-.hljs-title.class_.inherited__,
-.hljs-title.function_ {
-  color: rgb(var(--ctp-pink));
+
+article .content h5 {
+  @apply text-lg font-bold text-ctp-lavender;
 }
-.hljs-attr,
-.hljs-attribute,
-.hljs-literal,
-.hljs-meta,
-.hljs-number,
-.hljs-operator,
-.hljs-selector-attr,
-.hljs-selector-class,
-.hljs-selector-id,
-.hljs-variable {
-  color: rgb(var(--ctp-orange));
+
+article .content h6 {
+  @apply text-base font-bold text-ctp-lavender;
 }
-.hljs-meta .hljs-string,
-.hljs-regexp,
-.hljs-string {
-  color: rgb(var(--ctp-green))
+
+article .content p {
+  @apply text-base;
 }
-.hljs-built_in,
-.hljs-symbol {
-  color: rgb(var(--ctp-peach));
+
+article .content a {
+  @apply text-ctp-blue;
 }
-.hljs-code,
-.hljs-comment,
-.hljs-formula {
-  color: rgb(var(--ctp-subtext0));
+
+article .content a:hover {
+  @apply text-ctp-blue underline;
 }
-.hljs-name,
-.hljs-quote,
-.hljs-selector-pseudo,
-.hljs-selector-tag {
-  color: rgb(var(--ctp-blue));
+
+article .content ul {
+  @apply list-disc list-inside;
 }
-.hljs-subst {
-  color: rgb(var(--ctp-blue));
+
+article .content ol {
+  @apply list-decimal list-inside;
 }
-.hljs-section {
-  color: rgb(var(--ctp-blue));
-  font-weight: 700;
-}
-.hljs-bullet {
-  color: rgb(var(--ctp-orange));
-}
-.hljs-emphasis {
-  color: rgb(var(--ctp-subtext0));
-  font-style: italic;
-}
-.hljs-strong {
-  color: rgb(var(--ctp-text));
-  font-weight: 700;
-}
-.hljs-addition {
-  color: rgb(var(--ctp-green));
-  background-color: rgba(var(--ctp-green), 0.2);
-}
-.hljs-deletion {
-  color: rgb(var(--ctp-red));
-  background-color: rgba(var(--ctp-red), 0.2);
+
+article .content blockquote {
+  @apply border-l-4 border-ctp-surface0 pl-4;
 }
