--- a/src/app.postcss
+++ b/src/app.postcss
@@ -23,31 +23,31 @@ body {
 }
 
 article .content h1 {
-  @apply text-6xl font-bold text-ctp-lavender;
+  @apply mt-12 mb-6 text-6xl font-bold text-ctp-lavender;
 }
 
 article .content h2 {
-  @apply text-4xl font-bold text-ctp-lavender;
+  @apply mt-8 mb-4 text-4xl font-bold text-ctp-lavender;
 }
 
 article .content h3 {
-  @apply text-2xl font-bold text-ctp-lavender;
+  @apply mt-6 mb-3 text-2xl font-bold text-ctp-lavender;
 }
 
 article .content h4 {
-  @apply text-xl font-bold text-ctp-lavender;
+  @apply mt-4 mb-2 text-xl font-bold text-ctp-lavender;
 }
 
 article .content h5 {
-  @apply text-lg font-bold text-ctp-lavender;
+  @apply mt-4 mb-2 text-lg font-bold text-ctp-lavender;
 }
 
 article .content h6 {
-  @apply text-base font-bold text-ctp-lavender;
+  @apply mt-4 mb-2 text-base font-bold text-ctp-lavender;
 }
 
 article .content p {
-  @apply text-base;
+  @apply mb-2 text-base;
 }
 
 article .content a {
@@ -67,5 +67,5 @@ article .content ol {
 }
 
 article .content blockquote {
-  @apply border-l-4 border-ctp-surface0 pl-4;
+  @apply border-l-4 border-ctp-lavender text-ctp-lavender pl-4;
 }
