🖼️ Image style in articles

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -58,6 +58,10 @@ article .content a:hover {
   @apply text-ctp-blue underline;
 }
 
+article .content img {
+  @apply my-4 mx-auto;
+}
+
 article .content ul {
   @apply list-disc list-inside;
 }
