--- a/src/app.postcss
+++ b/src/app.postcss
@@ -22,54 +22,54 @@ body {
 	font-family: 'Inter', sans-serif;
 }
 
-article .content h1 {
+article .content:not(.content-ignore) h1 {
 	@apply mt-12 mb-6 text-6xl font-bold text-ctp-lavender;
 }
 
-article .content h2 {
+article .content:not(.content-ignore) h2 {
 	@apply mt-8 mb-4 text-4xl font-bold text-ctp-lavender;
 }
 
-article .content h3 {
+article .content:not(.content-ignore) h3 {
 	@apply mt-6 mb-3 text-2xl font-bold text-ctp-lavender;
 }
 
-article .content h4 {
+article .content:not(.content-ignore) h4 {
 	@apply mt-4 mb-2 text-xl font-bold text-ctp-lavender;
 }
 
-article .content h5 {
+article .content:not(.content-ignore) h5 {
 	@apply mt-4 mb-2 text-lg font-bold text-ctp-lavender;
 }
 
-article .content h6 {
+article .content:not(.content-ignore) h6 {
 	@apply mt-4 mb-2 text-base font-bold text-ctp-lavender;
 }
 
-article .content p {
+article .content:not(.content-ignore) p {
 	@apply mb-2 text-base;
 }
 
-article .content a {
+article .content:not(.content-ignore) a {
 	@apply text-ctp-blue;
 }
 
-article .content a:hover {
+article .content:not(.content-ignore) a:hover {
 	@apply text-ctp-blue underline;
 }
 
-article .content img {
+article .content:not(.content-ignore) img {
 	@apply my-4 mx-auto;
 }
 
-article .content ul {
+article .content:not(.content-ignore) ul {
 	@apply list-disc list-inside;
 }
 
-article .content ol {
+article .content:not(.content-ignore) ol {
 	@apply list-decimal list-inside;
 }
 
-article .content blockquote {
+article .content:not(.content-ignore) blockquote {
 	@apply border-l-4 border-ctp-lavender text-ctp-lavender pl-4;
 }
