--- a/src/app.postcss
+++ b/src/app.postcss
@@ -22,54 +22,54 @@ body {
 	font-family: 'Inter', sans-serif;
 }
 
-article .content:not(.content-ignore) h1 {
+article .content h1:not(.content-ignore) {
 	@apply mt-12 mb-6 text-6xl font-bold text-ctp-lavender;
 }
 
-article .content:not(.content-ignore) h2 {
+article .content h2:not(.content-ignore) {
 	@apply mt-8 mb-4 text-4xl font-bold text-ctp-lavender;
 }
 
-article .content:not(.content-ignore) h3 {
+article .content h3:not(.content-ignore) {
 	@apply mt-6 mb-3 text-2xl font-bold text-ctp-lavender;
 }
 
-article .content:not(.content-ignore) h4 {
+article .content h4:not(.content-ignore) {
 	@apply mt-4 mb-2 text-xl font-bold text-ctp-lavender;
 }
 
-article .content:not(.content-ignore) h5 {
+article .content h5:not(.content-ignore) {
 	@apply mt-4 mb-2 text-lg font-bold text-ctp-lavender;
 }
 
-article .content:not(.content-ignore) h6 {
+article .content h6:not(.content-ignore) {
 	@apply mt-4 mb-2 text-base font-bold text-ctp-lavender;
 }
 
-article .content:not(.content-ignore) p {
+article .content p:not(.content-ignore) {
 	@apply mb-2 text-base;
 }
 
-article .content:not(.content-ignore) a {
+article .content a:not(.content-ignore) {
 	@apply text-ctp-blue;
 }
 
-article .content:not(.content-ignore) a:hover {
+article .content a:not(.content-ignore):hover {
 	@apply text-ctp-blue underline;
 }
 
-article .content:not(.content-ignore) img {
+article .content img:not(.content-ignore) {
 	@apply my-4 mx-auto;
 }
 
-article .content:not(.content-ignore) ul {
+article .content ul:not(.content-ignore) {
 	@apply list-disc list-inside;
 }
 
-article .content:not(.content-ignore) ol {
+article .content ol:not(.content-ignore) {
 	@apply list-decimal list-inside;
 }
 
-article .content:not(.content-ignore) blockquote {
+article .content blockquote:not(.content-ignore) {
 	@apply border-l-4 border-ctp-lavender text-ctp-lavender pl-4;
 }
