😎 Fix prerendering issues

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -59,7 +59,7 @@ article .content a:not(.content-ignore):hover {
 }
 
 article .content img:not(.content-ignore) {
-	@apply my-4 mx-auto;
+	@apply w-full max-w-4xl my-4 mx-auto;
 }
 
 article .content ul:not(.content-ignore) {
